# tt-clang-tidy-checks

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
ttnn-nanobind-overload/: CMakeLists.txt  Plugin.cpp  README.md  TtNNNanobindOverloadCheck.cpp  TtNNNanobindOverloadCheck.h
ttnn-operation-type-naming/: CMakeLists.txt  Plugin.cpp  TtNNOperationTypeNamingCheck.cpp  TtNNOperationTypeNamingCheck.h
ttnn-return-value-type-alias/: CMakeLists.txt  Plugin.cpp  README.md  TtNNReturnValueTypeAliasCheck.cpp  TtNNReturnValueTypeAliasCheck.h
